# rs5e

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  serve.sh  typeshare.sh
client/: index.html  package-lock.json
client/src/: App.css  App.tsx  api.ts  index.css  main.tsx  util.ts
client/src/components/: AbilityScores.tsx  CombatSummary.tsx  Counter.tsx  MakeCharacter.tsx
client/src/utility/: types.ts
crates/rs5e-components/: Cargo.toml
crates/rs5e-components/src/: armor.rs  attacker.rs  combatant.rs  damages.rs  defender.rs  destroyed.rs  destructible.rs  has_abilities.rs  has_armor.rs  has_class.rs  has_level.rs  identifiable.rs  lib.rs  named.rs  weapon.rs
crates/rs5e-concepts/: Cargo.toml
crates/rs5e-concepts/src/: ability_modifier.rs  ability_scores.rs  ability_type.rs  advantage_type.rs  armor.rs  armor_category.rs  armor_class.rs  armor_proficiency_penalty.rs  armor_type.rs  attack_roll.rs  class_type.rs  cover_state.rs  critical_state.rs  damage_roll.rs  damage_source.rs  damage_type.rs  hit.rs  hit_dice.rs  hp.rs  hp_change.rs  id.rs  level.rs  lib.rs  material.rs  physical_attack_type.rs  proficiency_bonus.rs  proficiency_type.rs  prone_state.rs  roll.rs  roll_type.rs  weapon.rs  weapon_ability_modifier.rs  weapon_category.rs  weapon_proficiency_bonus.rs  weapon_range.rs  weapon_type.rs
crates/rs5e-concepts/src/util/: macros.rs
crates/rs5e-dice/: Cargo.toml
crates/rs5e-dice/src/: lib.rs
crates/rs5e-entities/: Cargo.toml
crates/rs5e-entities/src/: armor.rs  character.rs  lib.rs  weapon.rs
crates/rs5e-log/: Cargo.toml
crates/rs5e-log/src/: describe.rs  describe_physical_attack_context.rs  describe_physical_attack_outcome.rs  lib.rs
crates/rs5e-macro-derive/: Cargo.toml
crates/rs5e-macro-derive/src/: lib.rs
crates/rs5e-schema/: Cargo.toml
crates/rs5e-schema/src/: armor.rs  equipment.rs  lib.rs  weapon.rs
crates/rs5e-systems/: Cargo.toml
crates/rs5e-systems/src/: lib.rs  physical_attack.rs
crates/rs5e-systems/src/snapshots/: attacker.rs  defender.rs
src/: data_model.rs  main.rs
src/routes/: get_armor.rs  get_constants.rs  get_weapons.rs  mod.rs  post_attack.rs
