[package]
name = "rs5e-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs5e-concepts = { path = "../rs5e-concepts" }
rs5e-dice = { path = "../rs5e-dice" }
rs5e-entities = { path = "../rs5e-entities" }
rs5e-systems = { path = "../rs5e-systems", features = ["test"] }
serde = { version = "1.0.188", features = ["derive"] }
typeshare = "1.0.1"