[package]
name = "rs5e-macro-derive"
version = "0.1.0"
edition = "2021"
authors = ["Alex E"]
description = "DnD 5e Tools"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.37"
quote = "1.0.33"

[lib]
proc-macro = true
